--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "dom": "^0.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "server":"json-server --watch db.json --port 4000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
